isotope flicker fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,7 @@ body p {
     padding: 0px 3%;
     text-align: center;
     margin-bottom: 50px;
+    overflow-x:hidden;
 }
 
 .post-wrapper {
